<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share_page"
        android:contentDescription="@string/share_current_page"
        android:icon="@drawable/ic_share"
        android:title="@string/share_current_page"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_share_app"
        android:title="@string/share_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_privacy"
        android:title="@string/privacy_policy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_app"
        android:title="@string/rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_version"
        android:title="@string/app_version"
        app:showAsAction="never" />
</menu>
